Fixed navigation and added more spacing

--- a/css/app.css
+++ b/css/app.css
@@ -839,7 +839,7 @@ span.bold {
   border-radius: 2em;
   font-weight: bold; }
   .btn-request-demo:hover {
-    background-color: #5af; }
+    background-color: rgba(235, 0, 141, 0.8); }
 
 .btn-platform {
   margin-left: 30px;
@@ -1208,14 +1208,7 @@ textarea {
   background: #fff;
   width: 100%;
   font-family: "Roboto", sans-serif;
-  padding: 40px 0;
   transition: 0.3s; }
-
-.navbar.active {
-  position: fixed;
-  top: 0;
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.15);
-  padding: 0; }
 
 .main-nav {
   list-style-type: none;
@@ -1240,10 +1233,10 @@ textarea {
 
 .navbar-toggle {
   position: absolute;
-  top: 10px;
+  top: 20px;
   right: 20px;
   cursor: pointer;
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(1, 1, 1, 0.8);
   font-size: 24px; }
 
 .active {
@@ -1254,14 +1247,22 @@ textarea {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
     padding-bottom: 0;
     height: 80px;
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center; }
+            align-items: center;
+    -webkit-transform: translateY(30px);
+            transform: translateY(30px);
+    transition: 500ms; }
+  .navbar.active {
+    position: fixed;
+    top: 0;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.15);
+    -webkit-transform: translateY(0);
+            transform: translateY(0); }
   .main-nav {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1363,6 +1364,11 @@ footer h3 {
     display: block; }
 
 @media screen and (max-width: 768px) {
+  .container {
+    padding-left: 35px;
+    padding-right: 35px; }
+  .hero {
+    height: auto; }
   .btn--sm {
     margin-left: 0 !important; }
   .btn-platform {
@@ -1378,6 +1384,14 @@ footer h3 {
     width: 80%;
     margin: 0 auto;
     font-size: 16px; }
+  .navbar {
+    position: fixed;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.15);
+    padding-bottom: 10px; }
+  .logo {
+    margin-top: 5px; }
+    .logo img {
+      width: 35px !important; }
   .ecosystem img {
     width: 90%;
     margin: 0 auto; }
