--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -258,7 +258,7 @@ span.bold {
   border-radius: 2em;
   font-weight: bold;
   &:hover {
-    background-color: #5af;
+    background-color: $color-pink-light;
   }
 }
 
