--- a/scss/base/_color.scss
+++ b/scss/base/_color.scss
@@ -9,3 +9,4 @@ $color-warm-white: #f5f5f5;
 $color-text: #3e4242;
 $color-text-nav: #8b959e;
 $color-pink: rgb(235, 0, 141);
+$color-pink-light: rgba(235, 0, 141, 0.8);
