--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -10,14 +10,8 @@
   background: $color-white;
   width: 100%;
   font-family: "Roboto", sans-serif;
-  padding: 40px 0;
+
   transition: 0.3s;
-}
-.navbar.active {
-  position: fixed;
-  top: 0;
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.15);
-  padding: 0;
 }
 
 .main-nav {
@@ -47,10 +41,10 @@
 
 .navbar-toggle {
   position: absolute;
-  top: 10px;
+  top: 20px;
   right: 20px;
   cursor: pointer;
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(1, 1, 1, 0.8);
   font-size: 24px;
 }
 
@@ -61,12 +55,20 @@
 @media screen and (min-width: 768px) {
   .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     padding-bottom: 0;
     height: 80px;
     align-items: center;
+    transform: translateY(30px);
+    transition: 500ms;
   }
 
+  .navbar.active {
+    position: fixed;
+    top: 0;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.15);
+    transform: translateY(0);
+  }
   .main-nav {
     display: flex;
     margin-right: 30px;
