--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -1,4 +1,11 @@
 @media screen and (max-width: 768px) {
+  .container {
+    padding-left: 35px;
+    padding-right: 35px;
+  }
+  .hero {
+    height: auto;
+  }
   .btn--sm {
     margin-left: 0 !important;
   }
@@ -20,6 +27,17 @@
     width: 80%;
     margin: 0 auto;
     font-size: 16px;
+  }
+  .navbar {
+    position: fixed;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.15);
+    padding-bottom: 10px;
+  }
+  .logo {
+    margin-top: 5px;
+    img {
+      width: 35px !important;
+    }
   }
 
   .ecosystem {
